Добавить безопасную автоматическую выдачу ключей GPay через Digiseller
